--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <nav class="nav-contenedor">
     
     <a href="" class="enlace">Inicio</a>
-    <a href=""class="enlace">serivicios</a>
+    <a href=""class="enlace">Proyectos</a>
     <a href=""class="enlace">contacto</a>
-    <a href=""class="enlace">galeria</a>
+    
 </nav>
 
 
@@ -30,8 +30,10 @@
     <main>
         <div class="principal vh-100">
             <div class="cotenedor-texto">
-            <h1 class="nombre">CONSTUCCIONES WILLIAMS</h1>
-            <P class="descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, quibusdam.</P>
+            <h1 class="nombre">CONSTRUCCIONES WILLIAMS</h1>
+            <P class="descripcion">Somos construcciones Williams, una constructora joven y dinamica dedicada a trasformar espacios y crear hogares modernos y funcionales. Hemos emergido como un euipo innovador y apasionado, compremeetido con la excelencia en cada proyecto ue emprendemos.</P>
+        <h2>Unete a Nuesta Vision</h2>
+        <p>No solo construimos apartamntos, construios futuros. Te invitamos a conocernos y a formar parte de nustra creciente comunidad de clientes satisfechos que han encontrado en nosotros el aliado perfecto para hacer realidad su hogar soñado.</p>
         </div>
                 <img src="Zeno_Artwork.webp" alt="">
             </div>
