--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2>Unete a Nuesta Vision</h2>
         <p>No solo construimos apartamntos, construios futuros. Te invitamos a conocernos y a formar parte de nustra creciente comunidad de clientes satisfechos que han encontrado en nosotros el aliado perfecto para hacer realidad su hogar soñado.</p>
         </div>
-                <img src="Zeno_Artwork.webp" alt="">
+                <img src="Zeno_Artwork.webp" alt="" class="zeno">
             </div>
 
 
