--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
     </main>
 
     <footer>
-serivios
+<div class="div-footer">
+    <p>Quieres comprar desde el exterior? paso a paso de COMPRA</p>
+    <a href="https://www.google.com/"  class="botton">QUIERO SABER MAS</a>
+</div>
 
     </footer>
 
