--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 </a>
 <nav class="nav-contenedor">
     
-    <a href="" class="enlace">Inicio</a>
-    <a href=""class="enlace">Proyectos</a>
-    <a href=""class="enlace">contacto</a>
+    <a href="index.html" class="enlace">Inicio</a>
+    <a href="proyectos.html"class="enlace">Proyectos</a>
+    <a href="contacto.html"class="enlace">contacto</a>
     
 </nav>
 
