--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
 <div class="contenedor">
     <a href="">
-    <img src="Grand priest.webp" alt="" class="goku">
+    <img src="Construction crane-cuate.png" alt="" class="goku">
 </a>
 <nav class="nav-contenedor">
     
@@ -35,7 +35,7 @@
         <h2>Unete a Nuesta Vision</h2>
         <p>No solo construimos apartamntos, construios futuros. Te invitamos a conocernos y a formar parte de nustra creciente comunidad de clientes satisfechos que han encontrado en nosotros el aliado perfecto para hacer realidad su hogar soñado.</p>
         </div>
-                <img src="Zeno_Artwork.webp" alt="" class="zeno">
+                <img src="Build your home-amico (1).png" alt="" class="zeno">
             </div>
 
 
